added initial search functionality

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="col-12 search-column">
                 <form class="border" id="city-search-form">
                     <h2>Search for a City</h2>
-                    <input class="form-input" id="city" type="text">
+                    <input class="form-input" id="city-input" type="text">
                     <button class="searchBtn" type="submit">
                         <i class="fas fa-search"></i>
                     </button>  
