--- a/index.html
+++ b/index.html
@@ -6,36 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href= "./assets/css/style.css">
     <title>Weather Dashboard</title>
 </head>
     
 <body>
-    <header class="bg-primary">
-        <h1 class="">Weather Dashboard</h1>
+    <header>
+        <h1 class=""><i class="fas fa-bolt"></i> WEATHER DASHBOARD <i class="fas fa-bolt"></i></h1>
     </header>
     <main class="container"> 
        <div class="row">
             <div class="col-3 search-column">
-                <form class="border" id="city-search-form">
+                <form id="city-search-form">
                     <h2>Search for a City</h2>
-                    <input class="form-input" id="city-input" type="text">
+                    <input class="form-input" id="city-input" type="text" placeholder="Enter City">
                     <button class="searchBtn" type="submit">
                         <i class="fas fa-search"></i>
                     </button>  
                 </form>
-                <div class="past-search" id="past-search-buttons"></div>
+                <div class="past-search">
+                    <ul id="past-search-list"></ul>
+                </div>
+                    
             </div>
             <div class="col-9">
-                <div class="row border selected-city">
+                <div class="row justify-content-center selected-city" id = "selected-city" style="display: none">
                     <div class="col-12 list-group" id="current-weather-container">
                     </div>
                 </div>
-                <div class="row border" id="five-day-forecast">
+                <div class="row" id="five-day-forecast">
                 </div>
             </div>
         </div>
     </main>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="./assets/js/script.js"></script>
 </body>
