fixed display bug

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     
             </div>
             <div class="col-9">
-                <div class="row justify-content-center selected-city" id = "selected-city" style="display: none">
+                <div class="row justify-content-center selected-city " id = "selected-city" style = "display:vnone">
                     <div class="col-12 list-group" id="current-weather-container">
                     </div>
                 </div>
